# latent_consensus-2

./: .gitignore  latent_consensus_engineering_execution_manual_v1_2_3.md  latent_consensus_engineering_task_list_v1_2_2.md  latent_consensus_experiment_proposal_v_1_2_2.md  latent_consensus_experiment_proposal_v_1_2_3.md  latent_consensus_v1_2_3_changelog.md  pyproject.toml
configs/: arithmetic_debug.yaml  brs_main.yaml  lc2_shared.yaml  lc3_shared.yaml  local_base.yaml  optional_independent.yaml
data/: generate_arithmetic_debug.py  generate_brs.py
issue_records/: 2026-04-06-001-brs-default-template-capacity.md  2026-04-06-002-arithmetic-answer-boundary.md  2026-04-06-003-phase1-preflight-noisy-difficulty-gradient.md  2026-04-06-004-phase1-formal-arithmetic-saturation-risk.md  2026-04-06-005-cli-environment-entrypoint-mismatch.md  2026-04-06-006-phase2-brs-seq-len-underflow.md  2026-04-06-007-mps-loss-item-sync-bottleneck.md  2026-04-06-008-phase2-brs-ceiling-risk-watch.md  2026-04-06-009-phase2-b01-long-run-after-val-saturation.md  README.md
research_handoffs/: 2026-04-06_analysis_report.md
research_handoffs/2026-04-06_phase1_status/: README.md  artifacts_index.md  status_snapshot.json
results/phase1_gate1_real/: gate1_report.json  gate1_report_phase2_waived.json  local_core_ladder_report.json
scripts/: model_accounting.py  profile_memory.py  run_arithmetic_debug.py  run_brs_main.py  run_brs_promotion.py  run_local_core_ladder.py  validate_datasets.py
src/latent_consensus/: __init__.py
tests/: test_phase0_schemas.py  test_project_layout.py
(+62 files in other folders)
